<resources>
    <string name="app_name">XTranslation</string>
    <string name="username_hint">Username</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="connect">Connect</string>
    <string name="show_log">Show Log</string>
    <string name="log_hint">Log Display</string>
    <string name="x_translation">X Translation</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="logintext">Log In</string>
    <string name="hint_1">1</string>
</resources>
