<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/username_hint"
        android:text="Shakiba"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adresstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Adress"
        android:text=" 169.254.153.109"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/porttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Port"
        android:text="2222"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/adresstext" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toStartOf="@id/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/porttext" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/porttext" />

</androidx.constraintlayout.widget.ConstraintLayout>