<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogInActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/loginlogo"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/surahlistcardview"
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="15dp" android:inputType="text"
            android:hint="@string/username_login"
            android:background="@drawable/edittext_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/password_login"
                android:background="@drawable/edittext_shape"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:padding="10dp"
                android:textSize="24dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:background="@drawable/button_delivery_shape"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="ConnecttoServer"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>